# kserialport

./: .gitignore  README.md  gradle.properties  jitpack.yml  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: release.yml
app/: .gitignore  N2505_Sprayer_ECU_EN.md  build.gradle.kts  design-metrics.md  proguard-rules.pro
app/src/androidTest/java/com/onatakduman/kserialport/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/onatakduman/kserialport/: MainActivity.kt
app/src/main/res/: design.pen
app/src/main/res/drawable/: ic_launcher_foreground.xml  terminal.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/onatakduman/kserialport/: ExampleUnitTest.kt
docs/: privacy-policy.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kserialport/: build.gradle.kts
kserialport/src/androidTest/java/com/onatakduman/serialport/: ExampleInstrumentedTest.kt
kserialport/src/main/cpp/: CMakeLists.txt  kserialport.cpp  serialport.cpp
kserialport/src/main/java/com/onatakduman/kserialport/: DataLogger.kt  PacketFlow.kt  RootPermissionHelper.kt  SerialPort.kt  SerialPortConnection.kt  SerialPortFinder.kt  SerialPortJNI.kt  UsbSerialConnection.kt  UsbSerialDeviceFinder.kt
kserialport/src/test/java/com/onatakduman/kserialport/: DataLoggerTest.kt
kserialport/src/test/java/com/onatakduman/serialport/: ExampleUnitTest.kt  PacketFlowTest.kt
serialport/: build.gradle.kts
serialport/src/main/cpp/: CMakeLists.txt  serialport.cpp
(+55 files in other folders)
